--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "http://tomasz.janczuk.org",
     "twitter": "tjanczuk"
   },
-  "version": "0.1.0-pre",
+  "version": "0.1.0",
   "description": "Hosting .NET OWIN applications in node.js",
   "tags" : ["owin", "net", "clr", "c#", "managed", ".net"],
   "main": "./lib/owin.js",
