--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "owin",
+  "name": "edge",
   "author": {
     "name": "Tomasz Janczuk <tomasz@janczuk.org>",
     "url": "http://tomasz.janczuk.org",
     "twitter": "tjanczuk"
   },
-  "version": "0.6.1",
+  "version": "0.7.0-pre",
   "description": "Run .NET and node.js code in-process",
-  "tags" : ["owin", "net", "clr", "c#", "managed", ".net"],
-  "main": "./lib/owin.js",
+  "tags" : ["owin", "edge", "net", "clr", "c#", "managed", ".net"],
+  "main": "./lib/edge.js",
   "engines": { "node": "0.8.x" },
   "licenses": [ { "type": "Apache", "url": "http://www.apache.org/licenses/LICENSE-2.0" } ],
   "dependencies": {
@@ -16,13 +16,13 @@
   "devDependencies": {
     "mocha": "1.8.1"
   },
-  "homepage": "https://github.com/tjanczuk/owin",
+  "homepage": "https://github.com/tjanczuk/edge",
   "repository": {
     "type": "git",
-    "url": "git@github.com:tjanczuk/owin.git"
+    "url": "git@github.com:tjanczuk/edge.git"
   },
   "bugs" : {
-    "url" : "http://github.com/tjanczuk/owin/issues"
+    "url" : "http://github.com/tjanczuk/edge/issues"
   },
   "scripts": {
     "install": "node checkplatform.js",
