grunt binaries build step added + readme

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mocha": "1.8.1",
     "grunt": "0.4.0",
     "grunt-contrib-jshint": "~0.3.0",
-    "grunt-simple-mocha": "~0.3.2"
+    "grunt-simple-mocha": "~0.3.2",
+    "grunt-shell": "~0.2.1"
   },
   "homepage": "https://github.com/tjanczuk/edge",
   "repository": {
