--- a/.jshintrc
+++ b/.jshintrc
@@ -1,54 +1,56 @@
 {
-	"predef": [
-		"_",
-		"after",
-		"async",
-		"afterEach",
-		"afterEach",
-		"Backbone",
-		"before",
-		"beforeEach",
-		"describe",
-		"expect",
-		"iit",
-		"it",
-		"jasmine",
-		"moment",
-		"runs",
-		"sinon",
-		"spyOn",
-		"waits",
-		"waitsFor",
-		"xit",
-		"xdescribe"
-	],
+	"globals": {
+		"_": true,
+		"after": true,
+		"async": true,
+		"afterEach": true,
+		"afterEach": true,
+		"Backbone": true,
+		"before": true,
+		"beforeEach": true,
+		"describe": true,
+		"expect": true,
+		"iit": true,
+		"it": true,
+		"jasmine": true,
+		"moment": true,
+		"runs": true,
+		"sinon": true,
+		"spyOn": true,
+		"waits": true,
+		"waitsFor": true,
+		"xit": true,
+		"xdescribe": true
+	},
 
-	"asi" : false,
-	"bitwise" : true,
-	"boss" : false,
-	"browser" : true,
-	"curly" : true,
-	"debug": false,
-	"devel": false,
-	"eqeqeq": true,
-	"evil": false,
-	"expr": true,
-	"forin": false,
-	"immed": true,
-	"jquery" : true,
-	"latedef" : false,
-	"laxbreak": false,
-	"multistr": true,
-	"newcap": true,
-	"noarg": true,
-	"node" : true,
-	"noempty": false,
-	"nonew": true,
-	"onevar": false,
-	"plusplus": false,
-	"regexp": false,
-	"strict": false,
-	"sub": false,
-	"trailing" : true,
-	"undef": true
+	"options": {
+		"asi" : false,
+		"bitwise" : true,
+		"boss" : false,
+		"browser" : true,
+		"curly" : true,
+		"debug": false,
+		"devel": false,
+		"eqeqeq": true,
+		"evil": false,
+		"expr": true,
+		"forin": false,
+		"immed": true,
+		"jquery" : true,
+		"latedef" : false,
+		"laxbreak": false,
+		"multistr": true,
+		"newcap": true,
+		"noarg": true,
+		"node" : true,
+		"noempty": false,
+		"nonew": true,
+		"onevar": false,
+		"plusplus": false,
+		"regexp": false,
+		"strict": false,
+		"sub": false,
+		"trailing" : true,
+		"undef": true
+	}
 }
