--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
   "scripts": {
     "install": "tools\\install.bat",
     "test": "test\\test.bat",
-    "jshint": "node ./tools/.runJsHint.js"
+    "jshint": "node ./tools/runJsHint.js"
   }
 }
