--- a/src/CoreCLREmbedding/project.json
+++ b/src/CoreCLREmbedding/project.json
@@ -8,7 +8,8 @@
         "System.Dynamic.Runtime": "4.0.10-beta-23019",
         "System.Linq": "4.0.0-beta-23019",
         "System.Linq.Expressions": "4.0.10-beta-23019",
-        "System.IO.FileSystem": "4.0.0-beta-23019"
+        "System.IO.FileSystem": "4.0.0-beta-23019",
+        "System.Runtime.Loader": "4.0.0-beta-23019"
       }
     }
   },
