--- a/src/CoreCLREmbedding/project.json
+++ b/src/CoreCLREmbedding/project.json
@@ -1,23 +1,25 @@
 {
-  "frameworks": {
-    "dnxcore50": {
-      "dependencies": {
-        "System.Console": "4.0.0-beta-23019",
-        "System.Runtime": "4.0.20-beta-23019",
-        "System.Runtime.InteropServices": "4.0.20-beta-23019",
-        "System.Dynamic.Runtime": "4.0.10-beta-23019",
-        "System.Linq": "4.0.0-beta-23019",
-        "System.Linq.Expressions": "4.0.10-beta-23019",
-        "System.IO.FileSystem": "4.0.0-beta-23019",
-        "System.Runtime.Loader": "4.0.0-beta-23019"
-      }
+    "frameworks": {
+        "dnxcore50": {
+            "dependencies": {
+                "System.Console": "4.0.0-beta-23019",
+                "System.Runtime": "4.0.20-beta-23019",
+                "System.Runtime.InteropServices": "4.0.20-beta-23019",
+                "System.Dynamic.Runtime": "4.0.10-beta-23019",
+                "System.Linq": "4.0.0-beta-23019",
+                "System.Linq.Expressions": "4.0.10-beta-23019",
+                "System.IO.FileSystem": "4.0.0-beta-23019",
+                "System.Runtime.Loader": "4.0.0-beta-23019",
+                "Microsoft.CSharp": "4.0.0-beta-23019",
+                "System.Reflection": "4.0.10-beta-23109"
+            }
+        }
+    },
+    "compile": [
+        "*.cs",
+        "../common/*.cs"
+    ],
+    "compilationOptions": {
+        "allowUnsafe": true
     }
-  },
-  "compile": [
-  	"*.cs",
-  	"../common/*.cs"
-  ],
-  "compilationOptions": {
-  	"allowUnsafe": true
-  }
 }
