Init'int runtime info
When the CLR is being spun up, we now pass along the runtime info to
CoreCLREmbedding.Initialize(), including the OS name, version, app path,
and runtime path.

--- a/src/CoreCLREmbedding/project.json
+++ b/src/CoreCLREmbedding/project.json
@@ -13,6 +13,7 @@
                 "Microsoft.CSharp": "4.0.0-beta-*",
                 "System.Reflection": "4.1.0-beta-*",
                 "Microsoft.Dnx.Runtime": "1.0.0-beta8",
+                "Microsoft.Dnx.Compilation": "1.0.0-beta8",
                 "System.Xml.XPath.XmlDocument": "4.0.1-beta-*",
                 "System.Xml.ReaderWriter": "4.0.11-beta-*",
                 "System.Private.Uri": "4.0.1-beta-*",
