--- a/src/CoreCLREmbedding/project.json
+++ b/src/CoreCLREmbedding/project.json
@@ -2,22 +2,22 @@
     "frameworks": {
         "dnxcore50": {
             "dependencies": {
-                "System.Console": "4.0.0-beta-*",
-                "System.Runtime": "4.0.21-beta-*",
-                "System.Runtime.InteropServices": "4.0.21-beta-*",
-                "System.Dynamic.Runtime": "4.0.11-beta-*",
-                "System.Linq": "4.0.1-beta-*",
-                "System.Linq.Expressions": "4.0.10-beta-*",
-                "System.IO.FileSystem": "4.0.1-beta-*",
-                "System.Runtime.Loader": "4.0.0-beta-*",
-                "Microsoft.CSharp": "4.0.0-beta-*",
-                "System.Reflection": "4.1.0-beta-*",
+                "System.Console": "4.0.0-beta-23409",
+                "System.Runtime": "4.0.21-beta-23409",
+                "System.Runtime.InteropServices": "4.0.21-beta-23409",
+                "System.Dynamic.Runtime": "4.0.11-beta-23409",
+                "System.Linq": "4.0.1-beta-23409",
+                "System.Linq.Expressions": "4.0.11-beta-23409",
+                "System.IO.FileSystem": "4.0.1-beta-23409",
+                "System.Runtime.Loader": "4.0.0-beta-23409",
+                "Microsoft.CSharp": "4.0.1-beta-23409",
+                "System.Reflection": "4.1.0-beta-23409",
                 "Microsoft.Dnx.Runtime": "1.0.0-beta8",
                 "Microsoft.Dnx.Compilation": "1.0.0-beta8",
-                "System.Xml.XPath.XmlDocument": "4.0.1-beta-*",
-                "System.Xml.ReaderWriter": "4.0.11-beta-*",
-                "System.Private.Uri": "4.0.1-beta-*",
-                "System.Collections.Specialized": "4.0.1-beta-*"
+                "System.Xml.XPath.XmlDocument": "4.0.1-beta-23409",
+                "System.Xml.ReaderWriter": "4.0.11-beta-23409",
+                "System.Private.Uri": "4.0.1-beta-23225",
+                "System.Collections.Specialized": "4.0.1-beta-23409"
             }
         }
     },
