support double edge for node 5.9.1, edge.js v5.0.2

--- a/tools/nuget/edge.nuspec
+++ b/tools/nuget/edge.nuspec
@@ -2,16 +2,16 @@
 <package >
   <metadata>
     <id>Edge.js</id>
-    <version>4.4.1</version>
+    <version>5.9.1</version>
     <authors>Tomasz Janczuk</authors>
     <owners>Tomasz Janczuk</owners>
     <licenseUrl>https://raw.githubusercontent.com/tjanczuk/edge/master/LICENSE.txt</licenseUrl>
-    <projectUrl>http://tjanczuk.github.io/edge</projectUrl>
+    <projectUrl>https://github.com/tjanczuk/edge</projectUrl>
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>Script Node.js in a .NET application.</summary>
-    <description>With Edge.js you can script Node.js in a .NET application. Edge.js allows you to run Node.js and .NET code in one process. You can call Node.js functions from .NET and .NET functions from Node.js. Edge.js takes care of marshalling data between CLR and V8. Edge.js also reconciles threading models of single threaded V8 and multi-threaded CLR. Edge.js ensures correct lifetime of objects on V8 and CLR heaps. Edge.js NuGet package v4.1.1 supports scripting Node.js v4.4.1 with Edge.js v5.0.1.</description>
+    <description>With Edge.js you can script Node.js in a .NET application. Edge.js allows you to run Node.js and .NET code in one process. You can call Node.js functions from .NET and .NET functions from Node.js. Edge.js takes care of marshalling data between CLR and V8. Edge.js also reconciles threading models of single threaded V8 and multi-threaded CLR. Edge.js ensures correct lifetime of objects on V8 and CLR heaps. Edge.js NuGet package v5.9.1 supports scripting Node.js v5.9.1 with Edge.js v5.0.2.</description>
     <copyright>Copyright 2015 Tomasz Janczuk</copyright>
-    <tags>node.js node .net edge edge.js v8 clr interop javascript</tags>
+    <tags>node.js node .net edge edge.js v8 clr coreclr mono interop javascript</tags>
   </metadata>
 </package>
