Initial RC2 C++ implementation
Got edge_coreclr.node to compile and run against the latest RC2 code.
Currently requires you to specify a CORECLR_VERSION environment variable
so that we know which framework to run against, but I'll start figuring
out how to address that going forward.  Also copied over a bunch of
Microsoft's PAL methods from the CLI repository which has nearly
eliminated the OS-specific code that I had.

--- a/src/CoreCLREmbedding/project.json
+++ b/src/CoreCLREmbedding/project.json
@@ -1,6 +1,9 @@
 {
   "frameworks": {
     "netstandard1.5": {
+      "bin": {
+        "assembly": "bin/{configuration}/netstandard1.5/CoreCLREmbedding.dll"
+      },
       "imports": [
         "portable-dnxcore50+net45+win8+wp8+wpa81"
       ],
