--- a/lib/native/win32/x64/4.1.1/project.json
+++ b/lib/native/win32/x64/4.1.1/project.json
@@ -1,31 +1,39 @@
 {
-    "frameworks": {
-        "dnxcore50": {
-            "dependencies": {
-                "System.Console": "4.0.0-beta-23516",
-                "System.Runtime": "4.0.21-beta-23516",
-                "System.Runtime.InteropServices": "4.0.21-beta-23516",
-                "System.Dynamic.Runtime": "4.0.11-beta-23516",
-                "System.Linq": "4.0.1-beta-23516",
-                "System.Linq.Expressions": "4.0.10",
-                "System.IO.FileSystem": "4.0.1-beta-23516",
-                "System.Runtime.Loader": "4.0.0-beta-23516",
-                "Microsoft.CSharp": "4.0.1-beta-23516",
-                "System.Reflection": "4.1.0-beta-23516",
-                "Microsoft.Dnx.Runtime": "1.0.0-rc1-final",
-                "Microsoft.Dnx.Compilation": "1.0.0-rc1-final",
-                "System.Xml.XPath.XmlDocument": "4.0.1-beta-23516",
-                "System.Xml.ReaderWriter": "4.0.11-beta-23516",
-                "System.Private.Uri": "4.0.1-beta-23225",
-                "System.Collections.Specialized": "4.0.1-beta-23516"
-            }
-        }
-    },
-    "compile": [
-        "*.cs",
-        "../common/*.cs"
-    ],
-    "compilationOptions": {
-        "allowUnsafe": true
+  "frameworks": {
+    "netstandard1.5": {
+      "bin": {
+        "assembly": "bin/{configuration}/netstandard1.5/CoreCLREmbedding.dll"
+      },
+      "imports": [
+        "portable-dnxcore50+net45+win8+wp8+wpa81"
+      ],
+      "dependencies": {
+        "NETStandard.Library": "1.5.0-rc2-24027",
+        "System.Console": "4.0.0-rc2-24027",
+        "System.Runtime": "4.1.0-rc2-24027",
+        "System.Runtime.InteropServices": "4.1.0-rc2-24027",
+        "System.Dynamic.Runtime": "4.0.11-rc2-24027",
+        "System.Linq": "4.1.0-rc2-24027",
+        "System.Linq.Expressions": "4.0.11-rc2-24027",
+        "System.IO.FileSystem": "4.0.1-rc2-24027",
+        "System.Runtime.Loader": "4.0.0-rc2-24027",
+        "Microsoft.CSharp": "4.0.1-rc2-24027",
+        "System.Reflection": "4.1.0-rc2-24027",
+        "System.Xml.XPath.XmlDocument": "4.0.1-rc2-24027",
+        "System.Xml.ReaderWriter": "4.0.11-rc2-24027",
+        "System.Private.Uri": "4.0.1-rc2-24027",
+        "System.Collections.Specialized": "4.0.1-rc2-24027",
+        "Microsoft.DotNet.ProjectModel": "1.0.0-rc2-002702",
+        "Microsoft.Extensions.DependencyModel": "1.0.0-rc2-final"
+      }
     }
+  },
+
+  "buildOptions": {
+    "allowUnsafe": true,
+    "compile": [
+      "*.cs",
+      "../common/*.cs"
+    ]
+  }
 }
