--- a/src/CoreCLREmbedding/project.json
+++ b/src/CoreCLREmbedding/project.json
@@ -24,7 +24,8 @@
         "System.Private.Uri": "4.0.1-rc2-24027",
         "System.Collections.Specialized": "4.0.1-rc2-24027",
         "Microsoft.DotNet.ProjectModel": "1.0.0-rc2-002702",
-        "Microsoft.Extensions.DependencyModel": "1.0.0-rc2-final"
+        "Microsoft.Extensions.DependencyModel": "1.0.0-rc2-final",
+        "Microsoft.DotNet.InternalAbstractions": "1.0.0-rc2-002702"
       }
     }
   },
