CoreCLR runtime moved into NuGet package
Initial code that moves towards properly abstracting the Edge.js managed
runtime into a NuGet package that users are expected to reference in
their project.json.

--- a/tools/nuget/edge.nuspec
+++ b/tools/nuget/edge.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Edge.js</id>
-    <version>5.9.1</version>
+    <version>5.9.1-rc2</version>
     <authors>Tomasz Janczuk</authors>
     <owners>Tomasz Janczuk</owners>
     <licenseUrl>https://raw.githubusercontent.com/tjanczuk/edge/master/LICENSE.txt</licenseUrl>
@@ -13,5 +13,29 @@
     <description>With Edge.js you can script Node.js in a .NET application. Edge.js allows you to run Node.js and .NET code in one process. You can call Node.js functions from .NET and .NET functions from Node.js. Edge.js takes care of marshalling data between CLR and V8. Edge.js also reconciles threading models of single threaded V8 and multi-threaded CLR. Edge.js ensures correct lifetime of objects on V8 and CLR heaps. Edge.js NuGet package v5.9.1 supports scripting Node.js v5.9.1 with Edge.js v5.0.2.</description>
     <copyright>Copyright 2015 Tomasz Janczuk</copyright>
     <tags>node.js node .net edge edge.js v8 clr coreclr mono interop javascript</tags>
+    <dependencies>
+      <group targetFramework=".NETFramework4.0" />
+      <group targetFramework=".NETStandard1.5">
+        <dependency id="NETStandard.Library" version="[1.5.0-rc2-24027, )" />
+        <dependency id="System.Console" version="[4.0.0-rc2-24027, )" />
+        <dependency id="System.Runtime" version="[4.1.0-rc2-24027, )" />
+        <dependency id="System.Runtime.InteropServices" version="[4.1.0-rc2-24027, )" />
+        <dependency id="System.Dynamic.Runtime" version="[4.0.11-rc2-24027, )" />
+        <dependency id="System.Linq" version="[4.1.0-rc2-24027, )" />
+        <dependency id="System.Linq.Expressions" version="[4.0.11-rc2-24027, )" />
+        <dependency id="System.IO.FileSystem" version="[4.0.1-rc2-24027, )" />
+        <dependency id="System.Runtime.Loader" version="[4.0.0-rc2-24027, )" />
+        <dependency id="Microsoft.CSharp" version="[4.0.1-rc2-24027, )" />
+        <dependency id="System.Reflection" version="[4.1.0-rc2-24027, )" />
+        <dependency id="System.Xml.XPath.XmlDocument" version="[4.0.1-rc2-24027, )" />
+        <dependency id="System.Xml.ReaderWriter" version="[4.0.11-rc2-24027, )" />
+        <dependency id="System.Private.Uri" version="[4.0.1-rc2-24027, )" />
+        <dependency id="System.Collections.Specialized" version="[4.0.1-rc2-24027, )" />
+        <dependency id="Microsoft.DotNet.ProjectModel" version="[1.0.0-rc2-002702, )" />
+        <dependency id="Microsoft.Extensions.DependencyModel" version="[1.0.0-rc2-final, )" />
+        <dependency id="Microsoft.DotNet.InternalAbstractions" version="[1.0.0-rc2-002702, )" />
+        <dependency id="System.AppContext" version="[4.1.0-rc2-24027, )" />
+      </group>
+    </dependencies>
   </metadata>
 </package>
