--- a/lib/bootstrap/project.json
+++ b/lib/bootstrap/project.json
@@ -10,7 +10,8 @@
           "type": "platform",
           "version": "1.0.0-rc2-3002702"
         },
-        "Edge.js": "5.9.1-rc2"
+        "Edge.js": "5.9.1-rc2",
+        "Edge.js.CSharp": "0.3.1-pre"
       }
     }
   },
