--- a/lib/bootstrap/project.json
+++ b/lib/bootstrap/project.json
@@ -1,6 +1,6 @@
 {
   "frameworks": {
-    "netstandard1.5": {
+    "netstandard1.6": {
       "imports": [
         "portable-net45+wp80+win8+wpa81+dnxcore50",
         "portable-dnxcore50+net45+win8+wp8+wpa81"
@@ -8,10 +8,10 @@
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
-          "version": "1.0.0-rc2-3002702"
+          "version": "1.0.0"
         },
-        "Edge.js": "5.9.1-rc2",
-        "Edge.js.CSharp": "0.3.1-pre"
+        "Edge.js": "6.2.2",
+        "Edge.js.CSharp": "1.0.0"
       }
     }
   },
