--- a/src/double/Edge.js/project.json
+++ b/src/double/Edge.js/project.json
@@ -1,7 +1,13 @@
 {
-  "version": "6.2.2",
-  "description": "With Edge.js you can script Node.js in a .NET application. Edge.js allows you to run Node.js and .NET code in one process. You can call Node.js functions from .NET and .NET functions from Node.js. Edge.js takes care of marshalling data between CLR and V8. Edge.js also reconciles threading models of single threaded V8 and multi-threaded CLR. Edge.js ensures correct lifetime of objects on V8 and CLR heaps. Edge.js NuGet package v5.9.1 supports scripting Node.js v5.9.1 with Edge.js v5.0.2.",
+  "version": "5.9.2",
+  "description": "With Edge.js you can script Node.js in a .NET application. Edge.js allows you to run Node.js and .NET code in one process. You can call Node.js functions from .NET and .NET functions from Node.js. Edge.js takes care of marshalling data between CLR and V8. Edge.js also reconciles threading models of single threaded V8 and multi-threaded CLR. Edge.js ensures correct lifetime of objects on V8 and CLR heaps. Edge.js NuGet package v5.9.2 supports scripting Node.js v5.9.1 with Edge.js v5.9.2.",
   "copyright": "Copyright 2015 Tomasz Janczuk",
+  "packOptions": {
+    "summary": "Script Node.js in a .NET application.",
+    "projectUrl": "https://github.com/tjanczuk/edge",
+    "licenseUrl": "https://raw.githubusercontent.com/tjanczuk/edge/master/LICENSE.txt",
+    "tags": "node.js node .net edge edge.js v8 clr coreclr mono interop javascript"
+  },
 
   "frameworks": {
     "net40": {
