--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ install:
  - npm install -g grunt-cli
 
 script:
+ - dotnet restore src/double/Edge.js
  - dotnet build -c Release -f netstandard1.6 src/double/Edge.js
  - cp src/double/Edge.js/bin/Release/netstandard1.6/EdgeJs.dll src/double/Edge.js/bin/Release/net40/EdgeJs.dll
  - dotnet pack -c Release --no-build src/double/Edge.js
