--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,10 @@ install:
 script:
  - dotnet restore src/double/Edge.js
  - dotnet build -c Release -f netstandard1.6 src/double/Edge.js
+ - mkdir src/double/Edge.js/bin/Release/net40 
  - cp src/double/Edge.js/bin/Release/netstandard1.6/EdgeJs.dll src/double/Edge.js/bin/Release/net40/EdgeJs.dll
  - dotnet pack -c Release --no-build src/double/Edge.js
  - dotnet restore lib/bootstrap -f src/double/Edge.js/bin/Release
  - npm install
  - npm test
- - EDGE_USE_CORECLR=1 EDGE_DEBUG=1 npm test
+ - EDGE_USE_CORECLR=1 npm test
