--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,14 @@ node_js:
 
 before_install:  
  - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
- - sudo sh -c "echo 'deb http://download.mono-project.com/repo/debian wheezy main' > /etc/apt/sources.list.d/mono-xamarin.list"
+ - sudo sh -c "echo 'deb http://download.mono-project.com/repo/debian wheezy/snapshots/4.2.4 main' > /etc/apt/sources.list.d/mono-xamarin.list"
  - sudo apt-key adv --keyserver apt-mo.trafficmanager.net --recv-keys 417A0893
  - sudo sh -c "echo 'deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main' > /etc/apt/sources.list.d/dotnetdev.list"
  - sudo apt-get update
 
 install:
- - sudo apt-get install mono-devel dotnet-dev-1.0.0-preview2-003131
+ - sudo apt-get install mono-devel 
+ - sudo apt-get install dotnet-dev-1.0.0-preview2-003131
  - npm install -g grunt-cli
 
 script:
